--- a/host/frontend/operator/webui/src/app/device-pane/device-pane.component.sass
+++ b/host/frontend/operator/webui/src/app/device-pane/device-pane.component.sass
@@ -27,6 +27,9 @@
 ::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background
     background-color: #3DDC84
 
+.devices a
+    color: #eee
+
 #refresh-list
     cursor: pointer
 
@@ -46,7 +49,7 @@
     background: #000000
     color: #eee
 
-.Show-All
+.show-all
     display: block
     margin: auto
 
