--- a/host/frontend/operator/webui/src/app/device-pane/device-pane.component.html
+++ b/host/frontend/operator/webui/src/app/device-pane/device-pane.component.html
@@ -10,11 +10,11 @@
 <div>
   <ul class="devices">
     <section class="device-list">
-      <li *ngFor="let device of devices | async">
+      <li *ngFor="let device of (devices | async)">
         <!--Implemented with checkbox, not radio button as current page-->
         <mat-checkbox
           class="checkbox"
-          [checked]="device.isVisible"
+          [(ngModel)]="device.isVisible"
           (change)="onSelect(device)"
           >{{ device.id }}</mat-checkbox
         >
