--- a/host/frontend/operator/webui/src/app/device-pane/device-pane.component.html
+++ b/host/frontend/operator/webui/src/app/device-pane/device-pane.component.html
@@ -11,15 +11,14 @@
   <ul class="devices">
     <section class="device-list">
       <li *ngFor="let device of devices | async">
-        <!--Implemented with checkbox, not radio button as current page-->
         <mat-checkbox
           class="checkbox"
-          [(ngModel)]="device.isVisible"
+          [ngModel]="displaysService.visibleValidate(device)"
           (change)="onSelect(device)"
-          >{{ device.id }}</mat-checkbox
+          >{{ device }}</mat-checkbox
         >
         <a
-          href="{{ '/devices/' + device.id + '/files/client.html' }}"
+          [href]="displaysService.deviceConnectURL(device) | safe"
           title="Launch in new tab"
           target="_blank"
         >
